@@ -115,8 +115,8 @@ public class TargetedMSiRTMetricsTest extends TargetedMSPremiumTest
 
         log("Verifying the tooltip area of QC summary web part");
         QCSummaryWebPart qcSummaryWebPart = qcDashboard.getQcSummaryWebPart();
-        QCSummaryWebPart.QcSummaryTile qcSummaryTile = qcSummaryWebPart.getQcSummaryTiles().get(0);
-        mouseOver(qcSummaryTile.getRecentSampleFiles().get(0));
+        QCSummaryWebPart.QcSummaryTile qcSummaryTile = qcSummaryWebPart.getQcSummaryTiles().getFirst();
+        mouseOver(qcSummaryTile.getRecentSampleFiles().getFirst());
         final WebElement bubble = waitForElement(qcSummaryWebPart.getBubble().withDescendant(Locator.linkWithText("sample8_R03")));
         checker().verifyTrue("iRT Correlation missing in tooltip", Locator.linkWithText("iRT Correlation").existsIn(bubble));
         checker().verifyTrue("iRT Intercept missing in tooltip", Locator.linkWithText("iRT Intercept").existsIn(bubble));
